[package]
name = "paint-party"
version = "1.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "=0.3.26"
egui-macroquad = "=0.15.0"
egui = "=0.28.1"
nanoserde = "0.1.37"
quad-net = "0.1.1"
quad-url = "0.1.1"
