[package]
name = "paint-party"
version = "1.1.1"
edition = "2021"

[dependencies]
egui-macroquad = { git = "https://github.com/ateschan/egui-macroquad.git" }
macroquad = "0.4.0"
egui = "=0.25.0"
nanoserde = "0.1.37"
quad-net = {version = "0.1.1", features= ["default"]}
quad-url = "0.1.1"
quad-storage = "0.1.3"
nanoid = "0.4.0"
openssl = {version = "0.10", features=["vendored"]}

[profile.dev.package.'*']
opt-level = 3
